2008-03-30  Cameron Zwarich  <cwzwarich@uwaterloo.ca>

        Reviewed by Maciej.

        Adds support for dot notation and object literals.

        * VM/CodeBlock.cpp:
        (KJS::CodeBlock::dump):
        * VM/CodeGenerator.cpp:
        (KJS::CodeGenerator::emitNewObject):
        * VM/CodeGenerator.h:
        * VM/Machine.cpp:
        (KJS::Machine::privateExecute):
        * VM/Opcode.h:
        * kjs/nodes.cpp:
        (KJS::ObjectLiteralNode::emitCode):
        (KJS::PropertyListNode::emitCode):
        (KJS::DotAccessorNode::emitCode):
        (KJS::AssignDotNode::emitCode):
        * kjs/nodes.h:

2008-03-29  Geoffrey Garen  <ggaren@apple.com>

        Reviewed by Maciej Stachowiak.
        
        Mark the register file. 
        
        It's a conservative mark for now, but once registers are typed, we can
        do an exact mark.
        
        1.4% regression regardless of whether we actually do the marking.
        GCC is is worth every penny.

        * VM/Machine.cpp:
        (KJS::Machine::privateExecute): Most of the changes here are just for
        the fact that "registers" is a pointer now.

        * kjs/JSGlobalObject.cpp: The global object owns the register file now.

2008-03-28  Oliver Hunt  <oliver@apple.com>

        Reviewed by Maciej.

        Bug 18204: SquirrelFish: continue/break do not correctly handle scope popping
        <http://bugs.webkit.org/show_bug.cgi?id=18204>

        We now track the scope depth as part of a loop context, and add an
        extra instruction op_jump_scopes that is used to perform a jump across
        dynamic scope boundaries.

        * VM/CodeBlock.cpp:
        (KJS::CodeBlock::dump):
        * VM/CodeGenerator.cpp:
        (KJS::CodeGenerator::emitJumpScopes):
        * VM/CodeGenerator.h:
        * VM/Machine.cpp:
        (KJS::Machine::privateExecute):
        * VM/Opcode.h:
        * kjs/nodes.cpp:
        (KJS::ContinueNode::emitCode):
        (KJS::BreakNode::emitCode):
